<resources>
    <string name="app_name">Arc launcher</string>
    <string name="swipe_gesture">Gesture</string>
    <string name="todo">todo</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Arc_Gestures" />
    <string name="title_activity_settings_fragment_home">SettingsFragmentHome</string>
    <string name="title_activity_settings_fragment_drawer">SettingsFragmentDrawer</string>
    <string name="title_activity_setttings_fragment_updat_info">SetttingsFragmentUpdatInfo</string>
    <string name="Arc_Clock">Arc Clock</string>
    <string name="Date_off">Date is Disabled</string>
    <string name="Date_on">Date is Enabled</string>
    <string name="Date">Date</string>
    <string name="Date_And_Time">Date And Time</string>
    <string name="AutoUpdate">Turn On Auto Update</string>
    <string name="AutoUpdates">Auto Update</string>
    <string name="CurruntVersion">Version</string>
    <string name="ArcUpdate">Arc Update</string>
    <string name="Drawer">Drawer</string>
</resources>