<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:title="HOME SETTINGS">

        <PreferenceCategory
            app:title="@string/Date_And_Time">

            <SwitchPreferenceCompat
                app:key="sync"
                app:title="@string/Arc_Clock" />

            <SwitchPreferenceCompat
                app:dependency="sync"
                app:key="attachment"
                app:summaryOff="@string/Date_off"
                app:summaryOn="@string/Date_on"
                app:title="@string/Date" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="Default_Home"
                android:title="Set Arc as Default" />

        </PreferenceCategory>
    </PreferenceCategory>
</PreferenceScreen>